--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
+    "date-fns": "^2.8.1",
+    "dotenv": "^8.2.0",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
